tests/NormalTests/paczka1/fuzzy1/95540966.err
Error in line 1: nNr2zgGbY A93 23,8
Error in line 9: cl1zmQk A93 21,7
Error in line 3: Xozdxgv A93 11,6
Error in line 12: cl1zmQk A216 51,9
Error in line 16: 0BQTw A802 -6,2
Error in line 21: nNr2zgGbY A802 33,3
Error in line 29: nd08Lh A216 36,3
Error in line 28: Xozdxgv A93 95,7
